--- a/src/Components/Shared/Modal/modal.module.css
+++ b/src/Components/Shared/Modal/modal.module.css
@@ -1,17 +1,24 @@
 .modalBg {
-	position: absolute;
+	position: fixed;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: #00000090
 }
 
 .modalContainer {
 	background-color: #f0f0f0;
+	max-height: 92vh;
+	max-width: min-content;
+	overflow-y: auto;
 	padding: 10px;
 	border-radius: 4px;
+}
+
+.closeButton {
+	float: right;
 }
